--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,18 @@ universal=1
 
 [metadata]
 description-file=README.md
+
+[flake8]
+max-line-length = 120
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+
+[isort]
+line_length = 88
+known_first_party = nft_mp,config
+multi_line_output = 3
+default_section = THIRDPARTY
+skip = venv/
+skip_glob = **/migrations/*.py
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
